Fixed bug with responsive elements on mobile

--- a/projects.css
+++ b/projects.css
@@ -245,4 +245,12 @@ footer {
     display: none;
   }
 
+  .nav_about {
+    margin-right: 10px;
+  }
+
+  footer {
+    margin-right: 15px;
+  }
+
 }
